--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "debug": "^3.1.0",
     "lodash.isobjectlike": "^4.0.0",
     "object-hash": "^1.2.0",
-    "selectn": "^1.1.2"
+    "selectn": "^1.1.2",
+    "underscore": "^1.8.3"
   }
 }
